--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="w-100 d-flex justify-content-between">
                 <div>
                     <i class="fa fa-envelope mx-2"></i>
-                    <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:info@company.com">info@jones.com</a>
+                    <a class="navbar-sm-brand text-light text-decoration-none" href="mailto:kobbyj099@gmail.com">info@jones.com</a>
                     <i class="fa fa-phone mx-2"></i>
                     <a class="navbar-sm-brand text-light text-decoration-none" href="tel:+233598738535">+233598738535</a>
                 </div>
@@ -157,7 +157,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">Proident occaecat</h1>
+                                <h1 class="h1 text-success">Proident occaecat</h1>
                                 <h3 class="h2">Aliquip ex ea commodo consequat</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dicta veritatis quo rem dolores, non sit natus, voluptatem inventore reprehenderit soluta architecto magnam impedit officia beatae error facere? Consequatur, sed!
@@ -175,7 +175,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1">Repr in voluptate</h1>
+                                <h1 class="h1 text-success">Repr in voluptate</h1>
                                 <h3 class="h2">Ullamco laboris nisi ut </h3>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum corporis saepe nulla reprehenderit perferendis cupiditate harum quia natus, assumenda in fugiat quaerat provident eum recusandae! Sunt illo aut nobis et?
@@ -325,7 +325,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Zay Shop</h2>
+                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Jones Shop</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
@@ -333,11 +333,11 @@ https://templatemo.com/tm-559-zay-shop
                         </li>
                         <li>
                             <i class="fa fa-phone fa-fw"></i>
-                            <a class="text-decoration-none" href="tel:010-020-0340">010-020-0340</a>
+                            <a class="text-decoration-none" href="tel:+233598738535">+233598738535</a>
                         </li>
                         <li>
                             <i class="fa fa-envelope fa-fw"></i>
-                            <a class="text-decoration-none" href="mailto:info@company.com">info@company.com</a>
+                            <a class="text-decoration-none" href="mailto:kobbyj099@gmail.com">info@jones.com</a>
                         </li>
                     </ul>
                 </div>
@@ -403,8 +403,8 @@ https://templatemo.com/tm-559-zay-shop
                 <div class="row pt-2">
                     <div class="col-12">
                         <p class="text-left text-light">
-                            Copyright &copy; 2021 Company Name 
-                            | Designed by <a rel="sponsored" href="https://templatemo.com" target="_blank">TemplateMo</a>
+                            Copyright &copy; 2023 Jones Shop 
+                            | Designed by <a rel="sponsored" href="https://github.com/Kobby-Jones" target="_blank">Kobby Jones</a>
                         </p>
                     </div>
                 </div>
