--- a/shop.html
+++ b/shop.html
@@ -169,13 +169,13 @@ https://templatemo.com/tm-559-zay-shop
                     <div class="col-md-6">
                         <ul class="list-inline shop-top-menu pb-3 pt-1">
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3 all" href="#">All</a>
+                                <a class="h3 text-dark text-decoration-none mr-3 all cat" href="#">All</a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3 men" href="#">Men's</a>
+                                <a class="h3 text-dark text-decoration-none mr-3 men cat" href="#">Men's</a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none" href="#">Women's</a>
+                                <a class="h3 text-dark text-decoration-none cat" href="#">Women's</a>
                             </li>
                         </ul>
                     </div>
