--- a/shop.html
+++ b/shop.html
@@ -141,24 +141,17 @@ https://templatemo.com/tm-559-zay-shop
                         </ul>
                     </li>
                     <li class="pb-3">
-                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none text-success href="#">
-                            Sale
-                            <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
-                        </a>
-                        <ul id="collapseTwo" class="collapse list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Sport</a></li>
-                            <li><a class="text-decoration-none" href="#">Luxury</a></li>
-                        </ul>
-                    </li>
-                    <li class="pb-3">
                         <a class="collapsed d-flex justify-content-between h3 text-decoration-none text-success" href="#">
                             Product
                             <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
                         </a>
                         <ul id="collapseThree" class="collapse list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Bag</a></li>
-                            <li><a class="text-decoration-none" href="#">Sweather</a></li>
-                            <li><a class="text-decoration-none" href="#">Sunglass</a></li>
+                            <li><a class="text-decoration-none categories-product" href="#">Furnitures</a></li>
+                            <li><a class="text-decoration-none categories-product" href="#">Skincare</a></li>
+                            <li><a class="text-decoration-none categories-product" href="#">Sunglasses</a></li>
+                            <li><a class="text-decoration-none categories-product" href="#">Lighting</a></li>
+                            <li><a class="text-decoration-none categories-product" href="#">Automotive</a></li>
+                            <li><a class="text-decoration-none categories-product" href="#">Smartphones and Laptops</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -194,8 +187,8 @@ https://templatemo.com/tm-559-zay-shop
                 </div>
                 <div div="row">
                     <ul class="pagination pagination-lg justify-content-end">
-                        <li class="page-item disabled">
-                            <a class="page-link active rounded-0 mr-3 shadow-sm border-top-0 border-left-0 next" href="#" tabindex="-1">1</a>
+                        <li class="page-item">
+                            <a class="page-link text-dark active rounded-0 mr-3 shadow-sm border-top-0 border-left-0 next" href="#" tabindex="-1">1</a>
                         </li>
                         <li class="page-item">
                             <a class="page-link rounded-0 mr-3 shadow-sm border-top-0 border-left-0 text-dark next" href="#">2</a>
