--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-559-zay-shop
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+            <a class="navbar-brand text-info logo h1 align-self-center" href="index.html">
                 Jones
             </a>
 
@@ -139,7 +139,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left align-self-center">
-                                <h1 class="h1 text-success"><b>Jones</b> eCommerce</h1>
+                                <h1 class="h1 text-info"><b>Jones</b> eCommerce</h1>
                                 <h3 class="h2">Tiny and Perfect eCommerce Site</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repudiandae, inventore quas libero, illum adipisci, illo dolorem dolore harum earum perferendis aliquid consectetur? Deleniti dolore nulla unde assumenda molestiae aliquam!
@@ -157,7 +157,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success">Proident occaecat</h1>
+                                <h1 class="h1 text-info">Proident occaecat</h1>
                                 <h3 class="h2">Aliquip ex ea commodo consequat</h3>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dicta veritatis quo rem dolores, non sit natus, voluptatem inventore reprehenderit soluta architecto magnam impedit officia beatae error facere? Consequatur, sed!
@@ -175,7 +175,7 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-success">Repr in voluptate</h1>
+                                <h1 class="h1 text-info">Repr in voluptate</h1>
                                 <h3 class="h2">Ullamco laboris nisi ut </h3>
                                 <p>
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum corporis saepe nulla reprehenderit perferendis cupiditate harum quia natus, assumenda in fugiat quaerat provident eum recusandae! Sunt illo aut nobis et?
@@ -211,17 +211,17 @@ https://templatemo.com/tm-559-zay-shop
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="#"><img src="./assets/img/category_img_01.jpg" class="rounded-circle img-fluid border"></a>
                 <h5 class="text-center mt-3 mb-3">Watches</h5>
-                <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
+                <p class="text-center"><a class="btn btn-warning">Go Shop</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="#"><img src="./assets/img/category_img_02.jpg" class="rounded-circle img-fluid border"></a>
                 <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
-                <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
+                <p class="text-center"><a class="btn btn-warning">Go Shop</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
                 <a href="#"><img src="./assets/img/category_img_03.jpg" class="rounded-circle img-fluid border"></a>
                 <h2 class="h5 text-center mt-3 mb-3">Accessories</h2>
-                <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
+                <p class="text-center"><a class="btn btn-warning">Go Shop</a></p>
             </div>
         </div>
     </section>
@@ -325,7 +325,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Jones Shop</h2>
+                    <h2 class="h2 text-info border-bottom pb-3 border-light logo">Jones Shop</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
@@ -392,7 +392,7 @@ https://templatemo.com/tm-559-zay-shop
                     <label class="sr-only" for="subscribeEmail">Email address</label>
                     <div class="input-group mb-2">
                         <input type="text" class="form-control bg-dark border-light" id="subscribeEmail" placeholder="Email address">
-                        <div class="input-group-text btn-success text-light">Subscribe</div>
+                        <div class="input-group-text btn-warning text-light">Subscribe</div>
                     </div>
                 </div>
             </div>
