--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-559-zay-shop
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+            <a class="navbar-brand text-info logo h1 align-self-center" href="index.html">
                 Jones
             </a>
 
@@ -123,7 +123,7 @@ https://templatemo.com/tm-559-zay-shop
 
 
 
-    <section class="bg-success py-5">
+    <section class="bg-info py-5">
         <div class="container">
             <div class="row align-items-center py-5">
                 <div class="col-md-8 text-white">
@@ -157,28 +157,28 @@ https://templatemo.com/tm-559-zay-shop
 
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
-                    <div class="h1 text-success text-center"><i class="fa fa-truck fa-lg"></i></div>
+                    <div class="h1 text-info text-center"><i class="fa fa-truck fa-lg"></i></div>
                     <h2 class="h5 mt-4 text-center">Delivery Services</h2>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
-                    <div class="h1 text-success text-center"><i class="fas fa-exchange-alt"></i></div>
+                    <div class="h1 text-info text-center"><i class="fas fa-exchange-alt"></i></div>
                     <h2 class="h5 mt-4 text-center">Shipping & Return</h2>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
-                    <div class="h1 text-success text-center"><i class="fa fa-percent"></i></div>
+                    <div class="h1 text-info text-center"><i class="fa fa-percent"></i></div>
                     <h2 class="h5 mt-4 text-center">Promotion</h2>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-3 pb-5">
                 <div class="h-100 py-5 services-icon-wap shadow">
-                    <div class="h1 text-success text-center"><i class="fa fa-user"></i></div>
+                    <div class="h1 text-info text-center"><i class="fa fa-user"></i></div>
                     <h2 class="h5 mt-4 text-center">24 Hours Service</h2>
                 </div>
             </div>
@@ -297,7 +297,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Jones Shop</h2>
+                    <h2 class="h2 text-info border-bottom pb-3 border-light logo">Jones Shop</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
