--- a/shop.html
+++ b/shop.html
@@ -52,7 +52,7 @@ https://templatemo.com/tm-559-zay-shop
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+            <a class="navbar-brand text-info logo h1 align-self-center" href="index.html">
                 Jones
             </a>
 
@@ -131,7 +131,7 @@ https://templatemo.com/tm-559-zay-shop
                 <h1 class="h2 pb-4">Categories</h1>
                 <ul class="list-unstyled templatemo-accordion">
                     <li class="pb-3">
-                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none text-success" href="#">
+                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none text-info" href="#">
                             Gender
                             <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
                         </a>
@@ -141,7 +141,7 @@ https://templatemo.com/tm-559-zay-shop
                         </ul>
                     </li>
                     <li class="pb-3">
-                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none text-success" href="#">
+                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none text-info" href="#">
                             Product
                             <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
                         </a>
@@ -315,7 +315,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Jones Shop</h2>
+                    <h2 class="h2 text-info border-bottom pb-3 border-light logo">Jones Shop</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
