--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@ https://templatemo.com/tm-559-zay-shop
     <nav class="navbar navbar-expand-lg navbar-light shadow">
         <div class="container d-flex justify-content-between align-items-center">
 
-            <a class="navbar-brand text-success logo h1 align-self-center" href="index.html">
+            <a class="navbar-brand text-info logo h1 align-self-center" href="index.html">
                 Jones
             </a>
 
@@ -116,7 +116,7 @@ https://templatemo.com/tm-559-zay-shop
             <form action="" method="get" class="modal-content modal-body border-0 p-0">
                 <div class="input-group mb-2">
                     <input type="text" class="form-control" id="inputModalSearch" name="q" placeholder="Search ...">
-                    <button type="submit" class="input-group-text bg-success text-light">
+                    <button type="submit" class="input-group-text bg-info text-light">
                         <i class="fa fa-fw fa-search text-white"></i>
                     </button>
                 </div>
@@ -184,7 +184,7 @@ https://templatemo.com/tm-559-zay-shop
                 </div>
                 <div class="row">
                     <div class="col text-end mt-2">
-                        <button type="submit" class="btn btn-success btn-lg px-3">Let's Talk</button>
+                        <button type="submit" class="btn btn-info btn-lg px-3">Let's Talk</button>
                     </div>
                 </div>
             </form>
@@ -199,7 +199,7 @@ https://templatemo.com/tm-559-zay-shop
             <div class="row">
 
                 <div class="col-md-4 pt-5">
-                    <h2 class="h2 text-success border-bottom pb-3 border-light logo">Jones Shop</h2>
+                    <h2 class="h2 text-info border-bottom pb-3 border-light logo">Jones Shop</h2>
                     <ul class="list-unstyled text-light footer-link-list">
                         <li>
                             <i class="fas fa-map-marker-alt fa-fw"></i>
