--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@ https://templatemo.com/tm-559-zay-shop
                     <label class="sr-only" for="subscribeEmail">Email address</label>
                     <div class="input-group mb-2">
                         <input type="text" class="form-control bg-dark border-light" id="subscribeEmail" placeholder="Email address">
-                        <div class="input-group-text btn-warning text-light">Subscribe</div>
+                        <div class="input-group-text btn-success text-light">Subscribe</div>
                     </div>
                 </div>
             </div>
