--- a/contact.html
+++ b/contact.html
@@ -293,7 +293,7 @@ https://templatemo.com/tm-559-zay-shop
     <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.min.js"></script>
     <!-- End Script -->
 </body>
 
