--- a/shop-single.html
+++ b/shop-single.html
@@ -885,7 +885,7 @@
     <script src="assets/js/jquery-migrate-1.2.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/templatemo.js"></script>
-    <script src="assets/js/custom.js"></script>
+    <script src="assets/js/custom.min.js"></script>
     <!-- End Script -->
 
     <!-- Start Slider Script -->
