Map contrnt fit on all devices

--- a/contact.html
+++ b/contact.html
@@ -136,11 +136,14 @@ https://templatemo.com/tm-559-zay-shop
         </div>
     </div>
 
-    <section class="map">
-        <div class="map">
-           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3385.234133216647!2d-2.3144917857308505!3d7.33494671523407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdac92a170803d7%3A0x6b48d01bcca4224a!2sUniversity%20of%20Energy%20and%20Natural%20Resources!5e1!3m2!1sen!2sgh!4v1677727364472!5m2!1sen!2sgh" width="1440" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="container map-container">
+        <div class="row">
+            <div class="col-lg-12">
+                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3385.234133216647!2d-2.3144917857308505!3d7.33494671523407!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdac92a170803d7%3A0x6b48d01bcca4224a!2sUniversity%20of%20Energy%20and%20Natural%20Resources!5e1!3m2!1sen!2sgh!4v1677727364472!5m2!1sen!2sgh" width="1440" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          
         </div>
-    </section>
+    </div>
     <!-- Ena Map -->
 
     <!-- Start Contact -->
