Changed introductory texts

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ https://templatemo.com/tm-559-zay-shop
                                 <h1 class="h1 text-info"><b>Jones</b> eCommerce</h1>
                                 <h3 class="h2">Tiny and Perfect eCommerce Site</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repudiandae, inventore quas libero, illum adipisci, illo dolorem dolore harum earum perferendis aliquid consectetur? Deleniti dolore nulla unde assumenda molestiae aliquam!
+                                    Shopping just got better with our online store! Say goodbye to long lines, crowded stores, and limited inventory. Our website is your one-stop-shop for everything you need, from top brands and high-quality products to unbeatable deals and promotions. Plus, with our user-friendly interface and secure checkout process, you can shop with confidence and convenience. Join our community of satisfied customers today!
                                 </p>
                             </div>
                         </div>
@@ -157,10 +157,10 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-info">Proident occaecat</h1>
-                                <h3 class="h2">Aliquip ex ea commodo consequat</h3>
+                                <h1 class="h1 text-info">Jones eCommerce</h1>
+                                <h3 class="h2">Welcome to our virtual storefront</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam dicta veritatis quo rem dolores, non sit natus, voluptatem inventore reprehenderit soluta architecto magnam impedit officia beatae error facere? Consequatur, sed!
+                                    Experience the future of shopping with our online store. We believe that shopping should be fun, effortless, and personalized to your needs. That's why we've created a platform that combines cutting-edge technology with human expertise to offer you the best of both worlds. From product recommendations based on your preferences to easy returns and refunds, we've got you covered. Explore our store and discover a new way to shop.
                                 </p>
                             </div>
                         </div>
@@ -175,10 +175,10 @@ https://templatemo.com/tm-559-zay-shop
                         </div>
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
-                                <h1 class="h1 text-info">Repr in voluptate</h1>
-                                <h3 class="h2">Ullamco laboris nisi ut </h3>
+                                <h1 class="h1 text-info">Jones eCommerce</h1>
+                                <h3 class="h2">Your satisfaction is our top priority </h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum corporis saepe nulla reprehenderit perferendis cupiditate harum quia natus, assumenda in fugiat quaerat provident eum recusandae! Sunt illo aut nobis et?
+                                    Welcome to our online store! We're thrilled to have you here. Whether you're looking for the latest tech gadgets, trendy fashion accessories, or home decor, you've come to the right place. Our wide selection of products, competitive prices, and fast shipping make shopping with us easy and enjoyable. Browse our categories, find what you need, and let us take care of the rest.
                                 </p>
                             </div>
                         </div>
@@ -320,6 +320,7 @@ https://templatemo.com/tm-559-zay-shop
         </div>
     </section>
     <!-- End Featured Product -->
+
 
 
     <!-- Start Footer -->
